separacion de location

--- a/Code/preddicion.ipynb
+++ b/Code/preddicion.ipynb
@@ -638,6 +638,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -15115,16 +15122,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Disaster Type</th>\n",
+       "      <th>Precipitation (MM)</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Disaster Probability (or prediction)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1902</td>\n",
+       "      <td>Guatemala</td>\n",
+       "      <td>Quezaltenango, San Marcos</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Earthquake</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1902</td>\n",
+       "      <td>Guatemala</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Volcanic activity</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1902</td>\n",
+       "      <td>Guatemala</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Volcanic activity</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1903</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Frank, Alberta</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Mass movement (dry)</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1904</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Chittagong</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>Storm</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year     Country                   Location  Month        Disaster Type  \\\n",
+       "0  1902   Guatemala  Quezaltenango, San Marcos    4.0           Earthquake   \n",
+       "1  1902   Guatemala                        NaN    4.0    Volcanic activity   \n",
+       "2  1902   Guatemala                        NaN   10.0    Volcanic activity   \n",
+       "3  1903      Canada             Frank, Alberta    4.0  Mass movement (dry)   \n",
+       "4  1904  Bangladesh                 Chittagong   11.0                Storm   \n",
+       "\n",
+       "   Precipitation (MM)  Temperature  Disaster Probability (or prediction)  \n",
+       "0                24.0            0                                     1  \n",
+       "1                13.0            6                                     1  \n",
+       "2                35.0           33                                     1  \n",
+       "3                79.0           38                                     1  \n",
+       "4                54.0           15                                     1  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# En el df cuando df['Disaster Type'] es distinto de 'No' y "
+    "# Agregar la columna 'Disaster Probability (or prediction)' al df\n",
+    "df['Disaster Probability (or prediction)'] = 0\n",
+    "# En el df cuando df['Disaster Type'] es distinto de 'No' y NaN poner 1 en la columna 'Disaster Probability (or prediction)'\n",
+    "df.loc[(df['Disaster Type'] != \"No\") & (df['Disaster Type'].notnull()), 'Disaster Probability (or prediction)'] = 1\n",
+    "\n",
+    "# Mostrar df\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -15228,7 +15353,7 @@
        "40             Epidemic                72.0            7  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15237,6 +15362,9 @@
     "# Separar df en data de entrenamiento y data de test de forma aleatoria\n",
     "df_train = df.sample(frac=0.8, random_state=0)\n",
     "df_test = df.drop(df_train.index)\n",
+    "\n",
+    "# del df_test eliminar la columna 'Disaster Probability (or prediction)'\n",
+    "df_test = df_test.drop(columns=['Disaster Probability (or prediction)'])\n",
     "\n",
     "# Mostrar df_train\n",
     "df_train.head()\n",
@@ -15251,13 +15379,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Con Kats usar df_train para entrenar el modelo y df_test para predecir el porcentaje de que suceda un desastre \"Disaster Type\" \n",
+    "# Con Kats usar df_train para entrenar el modelo y df_test para predecir el porcentaje de que suceda un desastre \n",
     "\n",
-    "# Crear un modelo de tipo VAR\n",
-    "model = VARModel(df_train, VARParams())\n",
+    "# Convertir df_train a TimeSeriesData\n",
+    "tsd = TimeSeriesData(df=df_train, time_col_name='Month', value_col_name='Disaster Probability (or prediction)')\n",
+    "# Mostrar tsd\n",
+    "tsd\n",
     "\n",
-    "# Entrenar el modelo\n",
-    "model.fit()\n"
+    "# Crear modelo Prophet\n",
+    "params = ProphetParams(seasonality_mode='multiplicative')\n",
+    "\n",
+    "m = ProphetModel(tsd, params)\n",
+    "# Entrenar modelo\n",
+    "m.fit()\n",
+    "\n",
+    "# Convertir df_test a TimeSeriesData\n",
+    "tsd_test = TimeSeriesData(df=df_test, time_col_name='Month', value_col_name='Disaster Probability (or prediction)')\n",
+    "# Mostrar tsd_test\n",
+    "tsd_test\n",
+    "\n",
+    "# Predecir con el modelo\n",
+    "fcst = m.predict(tsd_test)\n",
+    "\n",
+    "# Mostrar fcst\n",
+    "fcst\n",
+    "\n"
    ]
   }
  ],
