--- a/Code/preddicion.ipynb
+++ b/Code/preddicion.ipynb
@@ -638,10 +638,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Disaster Type</th>\n",
+       "      <th>Precipitation (MM)</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Disaster Probability (or prediction)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1902</td>\n",
+       "      <td>Guatemala</td>\n",
+       "      <td>Quezaltenango, San Marcos</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Earthquake</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1902</td>\n",
+       "      <td>Guatemala</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Volcanic activity</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1902</td>\n",
+       "      <td>Guatemala</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Volcanic activity</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1903</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Frank, Alberta</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Mass movement (dry)</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1904</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Chittagong</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>Storm</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year     Country                   Location  Month        Disaster Type  \\\n",
+       "0  1902   Guatemala  Quezaltenango, San Marcos    4.0           Earthquake   \n",
+       "1  1902   Guatemala                        NaN    4.0    Volcanic activity   \n",
+       "2  1902   Guatemala                        NaN   10.0    Volcanic activity   \n",
+       "3  1903      Canada             Frank, Alberta    4.0  Mass movement (dry)   \n",
+       "4  1904  Bangladesh                 Chittagong   11.0                Storm   \n",
+       "\n",
+       "   Precipitation (MM)  Temperature  Disaster Probability (or prediction)  \n",
+       "0                24.0            0                                     1  \n",
+       "1                13.0            6                                     1  \n",
+       "2                35.0           33                                     1  \n",
+       "3                79.0           38                                     1  \n",
+       "4                54.0           15                                     1  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dentro del df columna 'Location' separar las filas que contengan ';' en dos filas\n",
+    "df = df.assign(Location=df['Location'].str.split(';')).explode('Location')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Disaster Type</th>\n",
+       "      <th>Precipitation (MM)</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Disaster Probability (or prediction)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30206</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>United States of America (the)</td>\n",
+       "      <td>El Paso (Texas)</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Flood</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>-9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Year                         Country         Location  Month  \\\n",
+       "30206  2021  United States of America (the)  El Paso (Texas)    8.0   \n",
+       "\n",
+       "      Disaster Type  Precipitation (MM)  Temperature  \\\n",
+       "30206         Flood                42.0           -9   \n",
+       "\n",
+       "       Disaster Probability (or prediction)  \n",
+       "30206                                     1  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Buscar en 'location' El Paso (Texas)\n",
+    "aux = df[df['Location'] == 'El Paso (Texas)']\n",
+    "aux.head()"
+   ]
   },
   {
    "cell_type": "code",
