--- a/Code/creacion_data.ipynb
+++ b/Code/creacion_data.ipynb
@@ -15135,6 +15135,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# guardar df en un csv\n",
+    "df.to_csv('../Data/extendido_1900_2021_DISASTERS.xlsx - emdat data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -15569,30 +15579,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Con Kats usar df_train para entrenar el modelo y df_test para predecir el porcentaje de que suceda un desastre \n",
-    "\n",
-    "# Convertir df_train a TimeSeriesData\n",
-    "tsd = TimeSeriesData(df=df_train, time_col_name='Month', value_col_name='Disaster Probability (or prediction)')\n",
-    "# Mostrar tsd\n",
-    "tsd\n",
-    "\n",
-    "# Crear modelo Prophet\n",
-    "params = ProphetParams(seasonality_mode='multiplicative')\n",
-    "\n",
-    "m = ProphetModel(tsd, params)\n",
-    "# Entrenar modelo\n",
-    "m.fit()\n",
-    "\n",
-    "# Convertir df_test a TimeSeriesData\n",
-    "tsd_test = TimeSeriesData(df=df_test, time_col_name='Month', value_col_name='Disaster Probability (or prediction)')\n",
-    "# Mostrar tsd_test\n",
-    "tsd_test\n",
-    "\n",
-    "# Predecir con el modelo\n",
-    "fcst = m.predict(tsd_test)\n",
-    "\n",
-    "# Mostrar fcst\n",
-    "fcst\n",
     "\n"
    ]
   }
